cluster-cd/apps/bitty/media/calibre/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name calibre
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: *name
    app.kubernetes.io/part-of: *name
    k8s-app: *name
  name: *name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *name
      app.kubernentes.io/component: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *name
        app.kubernentes.io/component: *name
      annotations:
        backup.velero.io/backup-volumes-excludes: books
        backup.velero.io/backup-volumes: config
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        # fsGroup: 1000
      containers:
        - name: calibre
          image: ghcr.io/linuxserver/calibre:7.22.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 2048Mi
            requests:
              memory: 1024Mi
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   runAsUser: 1000
          #   seccompProfile:
          #     type: RuntimeDefault
          #   capabilities:
          #     drop:
          #       - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: server
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/books
              name: books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre
        - name: books
          nfs:
            server: ${NFS_SERVER}
            path: /mnt/rusty/media/books
